--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -21,9 +21,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
-      - run: npm audit
       - run: npm run build --if-present
       - run: npm test
-      
+      - run: npm audit --audit-level moderate
+    
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
