--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -27,3 +27,12 @@ jobs:
 
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+semgrep:
+  name: Scan
+  runs-on: ubuntu-20.04
+  container:
+    image: returntocorp/semgrep
+  steps:
+    - uses: actions/checkout@v3
+    - run: semgrep ci
