--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -48,6 +48,7 @@ jobs:
 
   audit:
     runs-on: ubuntu-latest
+    needs: [ci, build, test]
     strategy:
       matrix:
         node-version: [10.x, 12.x, 14.x, 15.x]
